# TangoSourceDistribution

./: .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README  README.md  TANGO_CHANGES  ac_config.h.tmp.in  aclocal.m4  build.xml  cleanup_distrib  configure  configure.ac  configure.in  distribution.properties
.github/workflows/: main.yml
assets/: Makefile.am  README  TANGO_CHANGES  aclocal.m4  configure  configure.ac
assets/cppserver/AbstractClass/AccessControl/: Makefile.am  Makefile.in
assets/cppserver/database/: Makefile.am  Makefile.in
assets/cppserver/starter/: Makefile.am  Makefile.in
assets/cppserver/tangoaccesscontrol/: Makefile.am  Makefile.in
assets/cppserver/tangotest/: Makefile.am  Makefile.in
assets/doc/: Makefile.am  Makefile.in
assets/doc/man/: astor.1  atkmoni.1  atkpanel.1  atktuning.1  devicetree.1  jdraw.1  jive.1  logviewer.1  pogo.1  synopticappli.1
assets/lib/cpp/: tango.pc.in
assets/lib/cpp/client/: Makefile.am  Makefile.in
assets/lib/cpp/log4tango/: Makefile.am
assets/lib/cpp/server/: Makefile.in
assets/lib/idl/: Makefile.am  Makefile.in
assets/lib/java/: Makefile.am  Makefile.in  README  TangoRestServer.in  TangoVers.in  astor.in  atkmoni.in  atkpanel.in  atktuning.in  cvstag.in  devicetree.in  jdraw.in  jive.in  logback-server.xml  logback.xml  logviewer.in  pogo-6.in  pogo.in  synopticappli.in  tg_devtest.in
assets/m4/: RSSH_CHECK_OMNINOTIFY.m4  RSSH_CHECK_OMNIORB.m4  ac_path_mariadb.m4  ac_prog_mysql.m4  java_release.m4  mysql_release.m4  omniorb_release.m4  sed.m4
assets/pogo/: Makefile.am  Makefile.in
assets/pogo/preferences/: Makefile.am  Pogo.site_properties.in  cmake_tango.opt.in  common_target.opt  tango.opt.in
assets/pogo/templates/: Makefile.am  Makefile.in
assets/pogo/templates/cpp/: Allowed.cpp  ClassFactory.cpp  DevServ.cpp  DevServ.dsp  DevServ.h  DevServClass.cpp  DevServClass.h  MachineState.cpp  Makefile  Makefile.in  README  ReadHardwareAttr.cpp  ReadWriteAttr.cpp  main.cpp  readPropMethodName.cpp  set_default_property.cpp  state.cpp  write_property.cpp
assets/pogo/templates/cpp/vc8_project/: Class_dll.vcproj  Class_lib.vcproj  DevServ.sln  Server_shared.vcproj  Server_static.vcproj
assets/pogo/templates/html/: Doxyfile  HowIsGenerated.html  Inheritance.html  SearchItem.html  ServersList.html  TPG_CvsModule.html  TPG_CvsTags.html  TPG_NamingConventions.html  TangoProgrammerGuide.html  footer.html  header.html  index.html  page.html
assets/pogo/templates/java/: DevServ.java  DevServClass.java  DevServCmd.java  Makefile  README  ReadWriteAttr.java  TangoclassProxy.java  readPropMethodName.java  states.java  write_property.java
assets/pogo/templates/python/: Attribute.py  Command.py  DevServ.py
assets/pogo/templates/txt/: Shortcuts.txt  WhatIsNew.txt
assets/scripts/: tango.in  tango_wca.in
assets/utils/: Makefile.in
assets/utils/tango_admin/: Makefile.am  Makefile.in
cppserver/: Makefile.am  Makefile.in
cppserver/AbstractClass/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6/: Makefile.in  README  TANGO_CHANGES  configure  configure.in
distrib/source/tags/Tango-Release-7.2.6/cppserver/AbstractClass/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6/doc/man/: Makefile.in  atktuning.1  jive.1
distrib/source/tags/Tango-Release-7.2.6/lib/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6/lib/java/: Makefile.am  atkpanel.in  atktuning.in  cvstag.in  devicetree.in  jdraw.in  jive.in  logviewer.in  pogo-6.in  pogo.in  tg_devtest.in
distrib/source/tags/Tango-Release-7.2.6/m4/: ac_path_mysqlclient.m4  java_release.m4
distrib/source/tags/Tango-Release-7.2.6/pogo/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6/pogo/preferences/: Makefile.am  Makefile.in  tango.opt.in
distrib/source/tags/Tango-Release-7.2.6/scripts/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6/utils/: Makefile.in
distrib/source/tags/Tango-Release-7.2.6a/: ac_config.h.tmp.in
distrib/source/tags/Tango-Release-8.0.5/: Makefile.in  README  TANGO_CHANGES  aclocal.m4  configure  configure.in
distrib/source/tags/Tango-Release-8.1.2/: README
distrib/source/tags/Tango-Release-8.1.2b/: ac_config.h.tmp.in  configure
distrib/source/tags/Tango-Release-8.1.2c/: TANGO_CHANGES  cleanup_distrib
distrib/source/trunk/: Makefile.am  Makefile.in  README  TANGO_CHANGES  ac_config.h.tmp.in  aclocal.m4  cleanup_distrib  configure  configure.ac  configure.in
distrib/source/trunk/cppserver/: Makefile.am  Makefile.in
distrib/source/trunk/cppserver/AbstractClass/: Makefile.am  Makefile.in
distrib/source/trunk/doc/: Makefile.in
distrib/source/trunk/doc/man/: Makefile.in
distrib/source/trunk/lib/: Makefile.in
distrib/source/trunk/lib/cpp/: Makefile.in  tango.pc.in
distrib/source/trunk/lib/idl/: Makefile.in
distrib/source/trunk/lib/java/: Makefile.am  Makefile.in  TangoVers.in  astor.in  atkmoni.in  atkpanel.in  atktuning.in  cvstag.in  devicetree.in  jive.in  logviewer.in  synopticappli.in  tg_devtest.in
distrib/source/trunk/lib/java/jzmq/: config.hpp  jzmq.hpp  org_zeromq_ZMQ_Error.h  org_zeromq_ZMQ_Poller.h
distrib/source/trunk/m4/: RSSH_CHECK_OMNIORB.m4  ac_path_mariadb.m4  mariadb_release.m4
distrib/source/trunk/pogo/: Makefile.in
distrib/source/trunk/pogo/preferences/: Makefile.in  common_target.opt
distrib/source/trunk/scripts/: Makefile.am  Makefile.in
distrib/source/trunk/utils/: Makefile.in
doc/: Makefile.am  Makefile.in
doc/man/: Makefile.in  pogo.1
lib/: Makefile.in
lib/cpp/: Makefile.am  Makefile.in  tango.pc.in
lib/idl/: Makefile.am  README
lib/java/: Makefile.am  Makefile.in  astor.in  atkmoni.in  atkpanel.in  atktuning.in  devicetree.in  jdraw.in  jive.in  tg_devtest.in
lib/java/jzmq/: Makefile.am  Makefile.in  org_zeromq_ZMQ_Context.h
m4/: ac_path_mariadb.m4  ac_path_mysqlclient.m4  mysql_release.m4
pogo/: Makefile.in
pogo/preferences/: Makefile.in  common_target.opt  tango.opt.in
scripts/: Makefile.in  notify_daemon.in  tango.in  tango_wca.in
utils/: Makefile.am  Makefile.in
(+128 files in other folders)
