cpp_templatedir		= $(datadir)/pogo/templates/cpp
html_templatedir	= $(datadir)/pogo/templates/html
java_templatedir	= $(datadir)/pogo/templates/java
python_templatedir	= $(datadir)/pogo/templates/python
txt_templatedir		= $(datadir)/pogo/templates/txt


dist_cpp_template_DATA = cpp/Allowed.cpp \
		   cpp/ClassFactory.cpp \
		   cpp/DevServClass.cpp \
		   cpp/DevServClass.h \
		   cpp/DevServ.cpp \
		   cpp/DevServ.dsp \
		   cpp/DevServ.h \
		   cpp/MachineState.cpp \
		   cpp/main.cpp \
		   cpp/Makefile \
		   cpp/ReadHardwareAttr.cpp \
		   cpp/README \
		   cpp/readPropMethodName.cpp \
		   cpp/ReadWriteAttr.cpp \
		   cpp/set_default_property.cpp \
		   cpp/state.cpp \
		   cpp/write_property.cpp \
		   cpp/vc8_project/Class_dll.vcproj \
		   cpp/vc8_project/Class_lib.vcproj \
		   cpp/vc8_project/DevServ.sln \
		   cpp/vc8_project/Server_shared.vcproj \
		   cpp/vc8_project/Server_static.vcproj
 
EXTRA_DIST     = cpp/Makefile.in 

dist_html_template_DATA = html/Doxyfile \
		   html/footer.html \
		   html/frame.html \
		   html/header.html \
		   html/HowIsGenerated.html \
		   html/index.html \
		   html/Inheritance.html \
		   html/page.html \
		   html/SearchItem.html \
		   html/ServersList.html \
		   html/TangoProgrammerGuide.html \
		   html/tkcvs_browser.jpg \
		   html/TPG_CvsModule.html \
		   html/TPG_CvsTags.html \
		   html/TPG_NamingConventions.html

dist_java_template_DATA = java/DevServClass.java \
		   java/DevServCmd.java \
		   java/DevServ.java \
		   java/Makefile \
		   java/README \
		   java/readPropMethodName.java \
		   java/ReadWriteAttr.java \
		   java/states.java \
		   java/TangoclassProxy.java \
		   java/write_property.java 

dist_python_template_DATA  = python/Attribute.py \
			   python/Command.py \
			   python/DevServ.py

dist_txt_template_DATA = txt/Shortcuts.txt \
		   txt/WhatIsNew.txt


